// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input > (Snapshot) renders text input with description 1`] = `
<div
  class="flex w-full flex-col gap-2"
>
  <label
    class="text-foreground text-sm font-semibold"
    for="input-username"
    id="input-username-label"
  >
    Username
  </label>
  <input
    aria-describedby="input-username-description"
    aria-labelledby="input-username-label"
    class="border-border bg-background-input text-foreground placeholder:text-foreground-secondary focus-visible:ring-primary w-full rounded border-2 px-3 transition-colors focus-visible:ring-2 focus-visible:outline-none h-11"
    id="input-username"
    placeholder="your-username"
    type="text"
  />
  <p
    class="text-foreground-secondary text-sm select-none"
    id="input-username-description"
  >
    This is your public display name.
  </p>
</div>
`;

exports[`Input > (Snapshot) renders with error and no description 1`] = `
<div
  class="flex w-full flex-col gap-2"
>
  <label
    class="text-foreground text-sm font-semibold"
    for="input-username-error"
    id="input-username-error-label"
  >
    Username
  </label>
  <input
    aria-describedby="input-username-error-error"
    aria-errormessage="input-username-error-error"
    aria-invalid="true"
    aria-labelledby="input-username-error-label"
    class="bg-background-input text-foreground placeholder:text-foreground-secondary focus-visible:ring-primary w-full rounded border-2 px-3 transition-colors focus-visible:ring-2 focus-visible:outline-none h-11 border-accent-red"
    id="input-username-error"
    placeholder="your-username"
    type="text"
  />
  <p
    class="text-accent-red text-xs select-none"
    id="input-username-error-error"
  >
    Username is already taken
  </p>
</div>
`;
